<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="9dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/sfondo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical"
                android:paddingTop="66dp"
                android:paddingBottom="40dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="casual"
                    android:text="Accedi"
                    android:textAlignment="center"
                    android:textColor="@color/black80"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp">


                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:background="@drawable/button_bg_02"

                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif"

                        android:hint="@string/email"
                        android:inputType="textEmailAddress"

                        android:minWidth="88dip"
                        android:minHeight="48dip"

                        android:paddingStart="20dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="4dp"

                        android:singleLine="true"
                        android:textColorHint="@color/black40"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/password_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="10dp"

                        android:background="@drawable/button_bg_02"

                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:fontFamily="sans-serif"

                        android:hint="@string/password"
                        android:inputType="textPassword"

                        android:minWidth="88dip"
                        android:minHeight="48dip"

                        android:paddingStart="20dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="20dp"
                        android:paddingBottom="4dp"

                        android:singleLine="true"
                        android:textColorHint="@color/black40"
                        android:textSize="14sp" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/forgot_btn"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/black40"
                        android:fontFamily="sans-serif-medium"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:letterSpacing="0"
                        android:text="@string/forgot_password"
                        android:textAllCaps="false"
                        android:visibility="visible"
                        app:cornerRadius="40dp"
                        app:elevation="8dp"
                        app:rippleColor="#1B000000" />

                    <Button
                        android:id="@+id/interact_btn"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/button_bg_04"
                        android:fontFamily="sans-serif-medium"
                        android:stateListAnimator="@null"
                        android:text="LOGIN"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
